--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Acounter.js demo</title>
+    <title>Ah-counter.js demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Acounter.js demo</h1>
-<p>
-    Acounter.js is a JavaScript app for recording audio in the browser as uncompressed pcm audio in .wav containers. B
-</p>
+<p>The purpose of the Ah-Counter is to note any overused words or filler sounds used as a crutch by anyone who speaks during the meeting. Words may be inappropriate interjections, such as <em>and, well, but, so</em> and <em>you know</em>. Sounds may be <em>ah, um</em> or <em>er</em>. As Ah-Counter you: <strong></strong></p>
+<ul>
+    <li>When introduced during the club meeting, explain the role of the Ah-Counter. </li>
+    <li>In the Ah-Counter&rsquo;s log, record overlong pauses, overused words and filler sounds relied upon too often by all speakers. Examples include: <em>and, but, so, you know,</em> <em>ah, um.</em>
+    </li>
+</ul>
+
 
 <div id="controls">
     <button id="recordButton">Record</button>
